tree_sitter/test/corpus/function.txt
==================
Empty Function Definition
==================

void x() {
}

---
(source_file
 (function_definition
 (type
    (primitive_type))
  (identifier)
  (block)))



==================
Param Function Definition
==================

void x(i32 a, i32 b, i32 c) {
}

---
(source_file
 (function_definition
 (type
    (primitive_type))
  (identifier)
 (type
    (primitive_type))
  (identifier)
 (type
    (primitive_type))
  (identifier)
 (type
    (primitive_type))
  (identifier)
  (block)))
